# kalman_ws

./: .gitignore  .gitmodules  README.md
overlay_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
overlay_ws/install/aruco_opencv/lib/aruco_opencv/: aruco_tracker  aruco_tracker_autostart
overlay_ws/install/aruco_opencv/share/aruco_opencv/: package.dsv  (+7 more)
overlay_ws/install/spatio_temporal_voxel_layer/lib/: libopenvdb.so.10.0
overlay_ws/src/compressed_depth_image_transport/src/: codec.cpp  compressed_depth_publisher.cpp  compressed_depth_subscriber.cpp
overlay_ws/src/rtabmap_sync/: CMakeLists.txt
overlay_ws/src/rtabmap_sync/src/: CommonDataSubscriber.cpp
scripts/: .bashrc  Dockerfile  build-overlay  can_skip_install.py  configure_vscode.py  cyclone-dds.xml  default-ubuntu.bashrc  distrobox  distrobox-template.bashrc  distrobox.bashrc  kalm.bash  kalm.completion.bash  macros.bash  native-ubuntu.bashrc  remove-distrobox  remove-docker-image  rmw_zenoh_router.json5  select_colcon_packages.py  setup.bash  source-ros-setups.bash  stop-distrobox
src/kalman/: package.xml  setup.py
src/kalman/config/: default.rviz  kalman.urdf.xacro  nav2.yaml  physical_realsense.yaml  rtabmap.ini  ukf.yaml
src/kalman/launch/: kalman.launch.py  physical_drivers.launch.py  rgbd_odom.launch.py  test_nav2.launch.py  test_xacro.launch.py
src/kalman/urdf/: kalman.urdf.xacro
src/my_package/: package.xml  setup.py
src/my_package/launch/: my_node_plus_sim.launch.py  my_package.launch.py
src/my_package/my_package/: my_node.py  my_publisher.py  my_subscriber.py
(+1582 files in other folders)
